--- a/app/educar-boleta-4.html
+++ b/app/educar-boleta-4.html
@@ -669,9 +669,12 @@
                           <div class="box-pregunta">
                             <div class="item-header" >
                               <h5 class="mb-2">
-                                <button class="btn-pregunta" data-toggle="collapse" data-target="#pregunta-1" aria-expanded="true" aria-controls="pregunta-1">
-                                  ¿Qué es el cargo fijo?
-                                </button>
+                                <div class="row-button">
+                                  <button class="btn-pregunta" data-toggle="collapse" data-target="#pregunta-1" aria-expanded="true" aria-controls="pregunta-1">
+                                    ¿Qué es el cargo fijo?
+                                  </button>
+                                  <i class="fa fa-chevron-right"></i> <!-- <i class="fa fa-chevron-up"></i> -->
+                                </div>
                               </h5>
                             </div>
                         
@@ -681,12 +684,16 @@
                               </div>
                             </div>
                           </div>
+                         
                           <div class="box-pregunta">
                             <div class="item-header" >
                               <h5 class="mb-2">
-                                <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-2" aria-expanded="false" aria-controls="pregunta-2">
-                                  ¿Cual es el horario punta?
-                                </button>
+                                <div class="row-button">
+                                  <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-2" aria-expanded="false" aria-controls="pregunta-2">
+                                    ¿Cual es el horario punta?
+                                  </button>
+                                  <i class="fa fa-chevron-right"></i>
+                                </div>
                               </h5>
                             </div>
                             <div id="pregunta-2" class="collapse" data-parent="#accordion">
@@ -695,12 +702,16 @@
                               </div>
                             </div>
                           </div>
+
                           <div class="box-pregunta">
                             <div class="item-header" >
                               <h5 class="mb-2">
-                                <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-3" aria-expanded="false" aria-controls="pregunta-3">
-                                  ¿Qué es la recolección?
-                                </button>
+                                <div class="row-button">
+                                  <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-3" aria-expanded="false" aria-controls="pregunta-3">
+                                    ¿Qué es la recolección?
+                                  </button>
+                                  <i class="fa fa-chevron-right"></i>
+                                </div>
                               </h5>
                             </div>
                             <div id="pregunta-3" class="collapse" data-parent="#accordion">
@@ -709,12 +720,16 @@
                               </div>
                             </div>
                           </div>
+
                           <div class="box-pregunta">
                             <div class="item-header" >
                               <h5 class="mb-2">
-                                <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-4" aria-expanded="false" aria-controls="pregunta-4">
-                                  ¿Qué es tratamiento?
-                                </button>
+                                <div class="row-button">
+                                  <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-4" aria-expanded="false" aria-controls="pregunta-4">
+                                    ¿Qué es tratamiento?
+                                  </button>
+                                  <i class="fa fa-chevron-right"></i>
+                                </div>
                               </h5>
                             </div>
                             <div id="pregunta-4" class="collapse" data-parent="#accordion">
@@ -726,8 +741,11 @@
                           <div class="box-pregunta">
                             <div class="item-header" >
                               <h5 class="mb-2">
-                                <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-5" aria-expanded="false" aria-controls="pregunta-5">¿Cómo medir la lectura de mi consumo?
-                                </button>
+                                <div class="row-button">
+                                  <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-5" aria-expanded="false" aria-controls="pregunta-5">¿Cómo medir la lectura de mi consumo?
+                                  </button>
+                                  <i class="fa fa-chevron-right"></i>
+                                </div>
                               </h5>
                             </div>
                             <div id="pregunta-5" class="collapse" data-parent="#accordion">
@@ -739,8 +757,11 @@
                           <div class="box-pregunta">
                             <div class="item-header" >
                               <h5 class="mb-2">
-                                <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-6" aria-expanded="false" aria-controls="pregunta-6"> ¿Cómo saber si realizo sobreconsumo?
-                                </button>
+                                <div class="row-button">
+                                  <button class="btn-pregunta collapsed" data-toggle="collapse" data-target="#pregunta-6" aria-expanded="false" aria-controls="pregunta-6"> ¿Cómo saber si realizo sobreconsumo?
+                                  </button>
+                                  <i class="fa fa-chevron-right"></i>
+                                </div>
                               </h5>
                             </div>
                             <div id="pregunta-6" class="collapse" data-parent="#accordion">
