se agrega pagina boleta 2

--- a/app/ver-boleta-2.html
+++ b/app/ver-boleta-2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Ver boleta 1</title>
+  <title>Ver boleta 2</title>
 </head>
 
 <body class="page page-boleta">
@@ -573,14 +573,14 @@
               <div class="content-nav-tabs tabs-cuenta pt-0 border-0">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                   <li class="nav-item">
-                    <a class="nav-link active" id="cuenta-tab" data-toggle="tab" href="#cuenta" role="tab" aria-controls="cuenta" aria-selected="true">Dato de la boleta</a>
+                    <a class="nav-link" id="cuenta-tab" data-toggle="tab" href="#cuenta" role="tab" aria-controls="cuenta" aria-selected="true">Dato de la boleta</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" id="desglose-tab" data-toggle="tab" href="#desglose" role="tab" aria-controls="desglose" aria-selected="false">Ver desglose</a>
+                    <a class="nav-link active" id="desglose-tab" data-toggle="tab" href="#desglose" role="tab" aria-controls="desglose" aria-selected="false">Ver desglose</a>
                   </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                  <div class="tab-pane fade show active" id="cuenta" role="tabpanel" aria-labelledby="cuenta-tab">
+                  <div class="tab-pane fade" id="cuenta" role="tabpanel" aria-labelledby="cuenta-tab">
                     <div class="detalle-cuenta">
                       <ul class="lista-cuenta">
                         <li>
@@ -636,7 +636,7 @@
                     </div>
                    
                   </div>
-                  <div class="tab-pane fade" id="desglose" role="tabpanel" aria-labelledby="desglose-tab">
+                  <div class="tab-pane fade show active" id="desglose" role="tabpanel" aria-labelledby="desglose-tab">
                     <div class="detalle-cuenta">
 
                       <div class="lista-acordion">
