se agrega paginas notificaciones 1-4

--- a/app/notificaciones-ph2.html
+++ b/app/notificaciones-ph2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Notificaciones ph1</title>
+  <title>Notificaciones ph2</title>
 </head>
 
 <body class="page page-notificaciones">
@@ -561,11 +561,11 @@
               <p>Hace 1 días</p>
               <div class="texto-notifica">
                 <div class="subtitle-notifica">
-                  Hola <span>Oscar</span>, Te informamos que tu boleta ha sido entregada en tu domicilio, conoce los medios de...
+                  Hola <span>Oscar</span>, Tu boleta será emitida y enviada a tu domicilio en 5 días, te invitamos a que conozcas el detalle de tu boleta en el siguiente enlace.
                 </div>
               </div>
               <div class="row-btn-notifica">
-                <a href="" class="btn btn-lg btn-block btn-azul ">Pagar mi boleta</a>
+                <a href="" class="btn btn-lg btn-block btn-azul ">Ir a mi boleta</a>
               </div>
             </div>
           </div>
