--- a/app/login.html
+++ b/app/login.html
@@ -31,7 +31,8 @@
                       <div class="form-group">
                         <input type="password" class="form-control form-control-lg" placeholder="Contraseña">
                       </div>
-                      <button type="submit" class="btn btn-block btn-lg btn-verde">Continuar</button>
+                      <!-- <button type="submit" class="btn btn-block btn-lg btn-verde">Continuar</button> -->
+                      <a href="index.html" class="btn btn-block btn-lg btn-verde">Continuar</a>
                       <a href="recuperar-contrasena-1.html" class="link mt-4">Olvidé mi contraseña</a>
                   </form>
                 </div>
