update icon mapa

--- a/app/notificaciones-mapa.html
+++ b/app/notificaciones-mapa.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Notificaciones ph1</title>
+  <title>Notificaciones Mapa</title>
 </head>
 
 <body class="page page-notificaciones">
@@ -357,7 +357,7 @@
           <div class="row">
             <div class="row-detalle-notifica">
               <div class="circle-detalle-notifica">
-                <img src="images/icon-dolar.svg" alt="">
+                <img src="images/icon-vaso.svg" alt="">
               </div>
               <p>Hace 1 días</p>
               <div class="texto-notifica">
