se agrega pagina seguimiento

--- a/app/notificaciones-ph-aporte.html
+++ b/app/notificaciones-ph-aporte.html
@@ -538,7 +538,8 @@
           <div class="row">
             <div class="row-detalle-notifica">
               <div class="circle-detalle-notifica">
-                <img src="images/icon-agua.svg" alt="">
+                <!-- <img src="images/icon-agua.svg" alt=""> -->
+                <img src="images/icon-mapa.svg" alt="">
               </div>
               <p>Hace 1 días</p>
               <div class="texto-notifica"> 
