add page notificaciones 4

--- a/app/notificaciones-1.html
+++ b/app/notificaciones-1.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Notificaciones</title>
+  <title>Notificaciones 1</title>
 </head>
 
 <body class="page home">
@@ -43,7 +43,7 @@
                       </i>
                     </div>
                    
-                    <div class="box-lista-notifica">
+                    <div class="box-lista-notifica active">
                       <div class="title-notifica">
                         <span>Notificaciones</span>
                         <a href="#" >Configuraciones</a>
