add page notificaciones 6

--- a/app/notificaciones-5.html
+++ b/app/notificaciones-5.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Notificaciones 1</title>
+  <title>Notificaciones 5</title>
 </head>
 
 <body class="page home">
@@ -54,12 +54,12 @@
                       
                       <div class="lista-notifica">
                         <div class="row-notifica">
-                          <div class="circle-foto">
-                              <img src='images/foto.jpg'> 
+                          <div class="circle-check">
+                            <img src='images/icon-check-verde.svg'> 
                           </div>
                           <div class="texto-notifica">
                             <div class="subtitle-notifica">
-                              Hola <span>Defensor del planeta te informamos que estaremos realizando labores de manteni...</span>
+                              Hola <span> Defensor del planeta </span>, te informamos que el servicio ha sido correctamente restaurado a toda...
                             </div>
                             <p>Hace 2 días</p>
                           </div>
@@ -67,12 +67,12 @@
                         </div>
                 
                         <div class="row-notifica reader hover-delete">
-                          <div class="circle-foto">
-                            <img src='images/foto2.jpg'> 
-                            </div>
+                          <div class="circle-alert">
+                              <img src='images/icon-alert.svg'> 
+                          </div>
                           <div class="texto-notifica">
                             <div class="subtitle-notifica">
-                              Hola <span>Oscar</span>, Tu boleta será emitida y enviada a tu domicilio en 5 días, te invitamos a que conozcas el detalle... 
+                              Hola <span> Defensor del planeta</span>, te informamos que hemos realizado un corte del suministro de agua en...
                             </div>
                             <p>Hace 2 días</p>
                           </div>
@@ -83,12 +83,12 @@
                         </div>
 
                         <div class="row-notifica">
-                          <div class="circle-foto">
-                            <img src='images/foto3.jpg'> 
-                            </div>
+                          <div class="circle-check">
+                            <img src='images/icon-check-verde.svg'> 
+                          </div>
                           <div class="texto-notifica">
                             <div class="subtitle-notifica">
-                              Hola <span>Oscar</span>, Te informamos que tu fecha de facturación será el día 07-07-2021. Te invitamos a que...
+                              Hola <span>Incognito </span>, te informamos que el servicio ha sido correctamente restaurado a toda...
                             </div>
                             <p>Hace 2 días</p>
                           </div>
@@ -96,53 +96,53 @@
                         </div>
 
                         <div class="row-notifica">
-                          <div class="circle-foto">
-                            <img src='images/foto4.jpg'> 
+                          <div class="circle-alert">
+                            <img src='images/icon-alert.svg'> 
                           </div>
                           <div class="texto-notifica">
                             <div class="subtitle-notifica">
-                              Hola <span>Oscar</span>, Gracias a tu aporte se han podido ahorrar más de 2.000 litros de agua. sigue el siguiente enlace para...
+                              Hola <span> Movida</span>, te informamos que hemos realizado un corte del suministro de agua en...
                             </div>
                             <p>Hace 2 días</p>
                           </div>
                           <div class="punto"></div>
                         </div>
 
-                        <div class="row-notifica">
-                          <div class="circle-foto">
-                            <img src='images/foto5.jpg'> 
-                          </div>
-                          <div class="texto-notifica">
-                            <div class="subtitle-notifica">
-                              Hola <span>Oscar</span>, tu requerimiento <span> N° 185296376 </span>ha sido creado éxitosamente y en estos momentos...
-                            </div>
-                            <p>Hace 2 días</p>
-                          </div>
-                          <div class="punto"></div>
-                        </div>
-
-                        <div class="row-notifica">
-                          <div class="circle-foto">
-                            <img src='images/foto6.jpg'> 
-                          </div>
-                          <div class="texto-notifica">
-                            <div class="subtitle-notifica">
-                              Hola <span>Oscar</span>, gracias a tu reporte <span> N° 185296894 </span>se pudieron arreglar 2 grifos defectuosos cercanos a tí...
-                            </div>
-                            <p>Hace 2 días</p>
-                          </div>
-                          <div class="punto"></div>
-                        </div>
-
-                        <div class="row-notifica">
-                          <div class="circle-foto">
-                            <img src='images/foto7.jpg'> 
+                        <div class="row-notifica reader">
+                          <div class="circle-check">
+                            <img src='images/icon-check-verde.svg'> 
                           </div>
                           <div class="texto-notifica">
                             <div class="subtitle-notifica">
                               Hola <span>Cumplidor</span>, te informamos que el servicio ha sido correctamente restaurado a toda...
                             </div>
                             <p>Hace 2 días</p>
+                          </div>
+                          <div class="punto"></div>
+                        </div>
+
+                        <div class="row-notifica reader">
+                          <div class="circle-alert">
+                            <img src='images/icon-alert.svg'> 
+                          </div>
+                          <div class="texto-notifica">
+                            <div class="subtitle-notifica">
+                              Hola <span> Deudora </span>, te informamos que hemos realizado un corte del suministro de agua en...
+                            </div>
+                            <p>Hace 2 días</p>
+                          </div>
+                          <div class="punto"></div>
+                        </div>
+
+                        <div class="row-notifica reader">
+                          <div class="circle-puente">
+                            <img src='images/icon-puente.svg'> 
+                          </div>
+                          <div class="texto-notifica">
+                            <div class="subtitle-notifica">
+                              Hola <span> Dirigente vecinal</span>, te informamos que estamos realizando servicio de mantenimiento en tu sector...
+                            </div>
+                            <p>Hace 7 días</p>
                           </div>
                           <div class="punto"></div>
                         </div>
