add page pago 1

--- a/app/pago-1-movil.html
+++ b/app/pago-1-movil.html
@@ -320,15 +320,161 @@
         ¡Vence el 27 de Abril 2021!
       </div>
       
-      <section class="section-contenido">
+      <section class="section-pago">
         <div class="container">
           <div class="row">
             <div class="col">
-              <!-- <div class="content-zona">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti, officia?</p>
-              </div> -->
+              <div class="main-title text-center">
+                Selecciona un metodo de pago
+              </div>
+              <ul class="slider-pago">
+                <li class="active">
+                  <a href="#;">
+                    <img src="images/webpay.png" alt="webpay">
+                  </a>
+                  <i>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                      <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                      </svg>
+                  </i>
+                </li>
+                <li>
+                  <a href="#;">
+                    <img src="images/one-pay.png" alt="one pay">
+                  </a>
+                  <i>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                      <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                      </svg>
+                  </i>
+                </li>
+                <li>
+                  <a href="#;">
+                    <img src="images/servipag.png" alt="servi facil">
+                  </a>
+                  <i>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                      <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                      </svg>
+                  </i>
+                </li>
+                <li>
+                  <a href="#;">
+                    <img src="images/transferencia-bancaria.png" alt="transferencia bancaria">
+                  </a>
+                  <i>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                      <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                      </svg>
+                  </i>
+                </li>
+              </ul>
+              <div class="text-sm text-gray">
+                Tu último pago lo realizaste por <span class="text-green"> Webpay</span>.
+              </div>
+              <div class="box-recomendado">
+                <div class="row-title">
+                  <div class="title-small text-blue-dark">
+                    ¿Activar el pago automático para esta tarjeta ?
+                  </div>
+                  <div class="badge-recomendado text-xs">
+                    Recomendado
+                  </div>
+                </div>
+                <div class="item-switch mt-2">
+                  <div class="box-switch inline-switch">
+                    <label class="custom-control-label" for="consumoSwitches">
+                      Nunca realizaremos un cobro sin estás sin saldo, puedes cambiar esta opción en tu configuración de perfil
+                    </label>
+                    <label class="switch custom-switch mt-3">
+                      <input type="checkbox" id="consumoSwitches" checked>
+                      <span class="slider round"></span>
+                    </label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="box-convenios text-blue">
+                <div class="row-title mb-1">
+                  <h6 class="title-small pr-3">Descubre los Convenios Aguas Andinas tiene para tí</h6>
+                  <img src="images/icon-chancho.svg" alt="">
+                </div>
+                <p class="text-sm">Simula un convenio y no veas tu servicio interrumido </p>
+               
+                <div class="input-group input-group-pago">
+                  <input type="text" class="form-control input-busqueda" placeholder="Buscar por dirección" data-toggle="modal" data-target="#exampleModal">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <img src="images/arrow-right-white.svg" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="box-centro-ayuda text-blue">
+                <div class="row-title">
+                  <img  class="mr-2" src="images/icon-toltip.svg" alt="">
+                  <div class="text-sm font-weight-bold">Centro de Ayuda</div>
+                </div>
+                <u class="lista-ayuda">
+                  <li>
+                    <a href="">Convenios Aguas Andinas</a>
+                    <i class="fa fa-chevron-right"></i>
+                  </li>
+                  <li>
+                    <a href="">Formas de pago</a>
+                    <i class="fa fa-chevron-right"></i>
+                  </li>
+                  <li>
+                    <a href="">Pago automático con tu banco</a>
+                    <i class="fa fa-chevron-right"></i>
+                  </li>
+                </u>
+                <p class="mt-4 mb-2">Visitanos en nuestras redes</p>
+                <div class="lista-redes">
+                  <a href="">
+                    <i class="fa fa-linkedin"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-twitter"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-whatsapp"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-instagram"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-facebook"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-youtube"></i>
+                  </a>
+                </div>
+              </div>
+
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="section-realizar-pago">
+        <div class="row-title-explain">
+          <div class="main-title">Saldo anterior</div>
+          <div class="main-title">$0</div>
+        </div>
+        <div class="row-title-explain mt-4">
+          <div class="main-title">Total a pagar</div>
+          <div class="texto-precio">$9.850</div>
+        </div>
+        <div class="box-button px-4 mt-3">
+          <button type="submit" class="btn btn-block btn-block btn-lg btn-verde">
+            Realizar el pago
+          </button>
         </div>
       </section>
 
