--- a/app/educar-boleta-1.html
+++ b/app/educar-boleta-1.html
@@ -553,7 +553,7 @@
                 <img src="images/image-youtube.jpg" alt="youtube">
               </div>
               <div class="box-texto-video">
-                <h4 class="title-small mb-4">Título descriptivo</h4>
+                <h4 class="title-small text-blue mb-4">Título descriptivo</h4>
                 <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. </p>
               </div>
             </div>
