update comprobante exito

--- a/app/comprobante-exito.html
+++ b/app/comprobante-exito.html
@@ -421,6 +421,33 @@
           </div>
         </div>
 
+        <div class="box-update-personal">
+          <div class="title-small text-blue-dark  mb-2">
+            ¿Está actualizada tu información personal?
+          </div>
+          <p class="text-sm text-gray">Revisa tus datos </p>
+          <form action="">
+            <div class="form-group">
+                <div class="input-group input-group-info">
+                  <input type="email" class="form-control input-busqueda" placeholder="Correo" data-toggle="modal" data-target="#exampleModal">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <img src="images/arrow-right-white.svg" alt="">
+                    </div>
+                  </div>
+                </div>
+                <div class="input-group input-group-info">
+                  <input type="text" class="form-control input-busqueda" placeholder="Celular" data-toggle="modal" data-target="#exampleModal">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <img src="images/arrow-right-white.svg" alt="">
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </form>
+        </div>
+
       </section>
 
      
